# ClaudeCode-Debugger

./: .pre-commit-config.yaml  CHANGELOG.md  CI_FIX_COMPLETE_SUMMARY.md  CI_FIX_SUMMARY.md  CLAUDE_CCDEBUG_COMMAND.md  CLAUDE_CCDEBUG_EXAMPLES.md  CLAUDE_CODE_GUIDE.md  CLAUDE_CODE_INTEGRATION.md  CLAUDE_CODE_SETUP.md  CLAUDE_CODE_USAGE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INTEGRATION_GUIDE.md  LICENSE  Makefile  README.md  README_ADVANCED.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.5.0.md  TEMPLATE_FIX_SUMMARY.md  TESTING_GUIDE.md  claude_code_ccdebug.py  claude_code_commands.py  claude_code_integration.py  claude_slash_command.md  demo_enhanced.py  fix_ci_errors.py  fix_remaining_type_issues.py  fix_type_annotations.py  install_claude_integration.sh  package.json  pyproject.toml  requirements.txt  setup.py  setup_advanced.py  setup_claude_code.py  test_cli_complete.py  test_complete_suite.py  test_enhanced_features.py
.claude/: AGENTS.md
.claude/agents/: ai-integration-agent.md  cli-developer-agent.md  error-pattern-agent.md  plugin-system-agent.md  project-setup-agent.md  template-system-agent.md  test-documentation-agent.md
.github/workflows/: ci.yml  release.yml
claudecode_debugger/: __init__.py  cli.py  cli_enhanced.py  cli_new.py  main.py
claudecode_debugger/analyzers/: __init__.py  context.py  pattern.py  stack_trace.py
claudecode_debugger/core/: __init__.py  advanced_detector.py  detector.py  generator.py  ml_classifier.py  performance_optimizer.py  template_manager.py  template_system.py  training_data_generator.py
claudecode_debugger/i18n/: __init__.py  translator.py
claudecode_debugger/plugins/: __init__.py  base.py  stack_trace_analyzer.py
claudecode_debugger/suggestions/: __init__.py  engine.py
claudecode_debugger/templates/: default.yaml  javascript.yaml  typescript.yaml
claudecode_debugger/templates/advanced/: base.yaml  cicd.yaml  (+1 more)
claudecode_debugger/utils/: __init__.py  clipboard.py  config.py  formatters.py  history.py
config/: ccdebug.ini.example
docs/: ADVANCED_TEMPLATES.md  ENHANCED_CLI_GUIDE.md
examples/: advanced_error_detection_demo.py  advanced_template_demo.py  enhanced_cli_demo.py
templates/: general.yaml  memory.yaml  network.yaml  python.yaml
templates/advanced/: api_network.yaml  database.yaml  docker_k8s.yaml  memory_advanced.yaml  python_advanced.yaml
tests/: __init__.py  conftest.py  test_advanced_detector.py  test_cli.py  test_detector.py  test_generator.py
tests/integration/: test_integration.py
tests/unit/: test_cli.py  test_core.py
(+3 files in other folders)
